nomos-root/namespaces/acme-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acme-dev
  labels:
    environment: dev
    istio-injection: enabled
