nomos-root/namespaces/acme-dev/acme-dev-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gw
  http:
  - match:
    - uri:
        prefix: "/acme-dev"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: acme-dev.default.svc.cluster.local
        port:
          number: 80
